--- a/samples/crysil-server-android/app/build.gradle
+++ b/samples/crysil-server-android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "at.tugraz.iaik.skytrust.android"
+        applicationId "org.crysil.android"
         minSdkVersion 19
         targetSdkVersion 19
         versionCode 7
