--- a/samples/crysil-server-android/app/build.gradle
+++ b/samples/crysil-server-android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 22
     buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "org.crysil.android"
         minSdkVersion 19
-        targetSdkVersion 19
+        targetSdkVersion 20
         versionCode 7
         versionName "0.1.7"
         multiDexEnabled true
@@ -49,8 +49,8 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":auth-android")
-    compile "at.iaik.skytrust.instance:instance-private-server:1.0-SNAPSHOT"
+    compile project(":server-android")
+
     compile "com.google.android.gms:play-services-gcm:7.3.0"
     compile "com.android.support:support-v4:22.2.0"
     compile "com.android.support:multidex:1.0.1"
