--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -18,6 +18,7 @@
         <module>actors/java/software-crypto</module>
         <module>actors/java/singlekey-keystore</module>
         <module>actors/java/cloudks-keystore</module>
+        <module>actors/java/filekeystore</module>
         <module>actors/java/smcc</module>
         <module>actors/java/u2f-android</module>
         <module>actors/java/u2f-pkcs11</module>
