--- a/modules/commons/java/pom.xml
+++ b/modules/commons/java/pom.xml
@@ -2,6 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.crysil</groupId>
     <artifactId>commons</artifactId>
+    <version>2.0-1</version>
 
     <parent>
         <artifactId>main</artifactId>
