--- a/samples/cms-desktop-app/pom.xml
+++ b/samples/cms-desktop-app/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
     	<groupId>org.crysil.communications</groupId>
     	<artifactId>jce-receiver</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>2.0-1</version>
     </dependency>
   </dependencies>
     <build>
