--- a/samples/pkcs11/CMakeLists.txt
+++ b/samples/pkcs11/CMakeLists.txt
@@ -18,7 +18,9 @@ FIND_PACKAGE(JNI REQUIRED)
 include_directories(${JNI_INCLUDE_DIRS})
 LINK_DIRECTORIES(${JNI_LIBRARIES})
 
-add_definitions(-DSYKTRUSTJAR="${PROJECT_BINARY_DIR}/lib/PKCS11.jar")
+file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+
+add_definitions(-DSYKTRUSTJAR="${PROJECT_BINARY_DIR}/bin/PKCS11.jar")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
 
 
@@ -34,10 +36,10 @@ endif()
 
 SET(LIBSRC "src/C/src/pkcs11.c")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c89 -pedantic")
-SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/lib)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/lib)
-SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/bin)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/bin)
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 add_library(skytrustpkcs11 SHARED ${LIBSRC})
 
 
