--- a/samples/pkcs11/build.xml
+++ b/samples/pkcs11/build.xml
@@ -1,4 +1,4 @@
-<project name="PKCS11" basedir=".">
+<project name="PKCS11" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 
     <property name="name" value="PKCS11"/>
 	
@@ -25,15 +25,6 @@
 
     <property name="debug" value="false"/>
     <property name="debuglevel" value="source,lines,vars"/>
-     
-     
-     <path id="skytrust.classpath">
-	<pathelement location="skytrust-element-java/common/target/classes/"/>
-        <pathelement location="skytrust-element-java/core/target/classes/"/>
-        <!--<pathelement location="${c.lib.dir}/dependencies.jar"/>-->
-        <pathelement location="${c.lib.dir}/instance-jce-to-remote-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
-        <pathelement location="${c.lib.dir}/okhttp-2.3.0-SNAPSHOT.jar"/>
-    </path>
 	
     <target name="init" depends="SWIG-preprocess,SWIG,cmake"/>
     <target name="compile" depends="C-compile,JAVA-compile"/>
@@ -69,11 +60,48 @@
         <arg line="-java -package proxys -outdir ${swig.generated.dir} -o ${c.src.dir}/pkcs11_java_wrap.c ${swig.file}"/>
       </exec>
     </target>
+<!-- Ivy, for "Maven" dependency management -->
+	<!-- here is the version of ivy we will use. change this property to try a newer 
+         version if you want -->
+	<property name="ivy.install.version" value="2.4.0" />
+	<property name="ivy.jar.dir" value="${basedir}/ivy" />
+	<property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar" />
+
+    <target name="download-ivy" unless="skip.download">
+    	<mkdir dir="${ivy.jar.dir}"/>
+		<!-- download Ivy from web site so that it can be used even without any special installation -->
+		<echo message="installing ivy..."/>
+    	<get src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+    		 dest="${ivy.jar.file}" usetimestamp="true"/>
+    </target>
+    
+    <!-- ================================= 
+          target: install-ivy         
+            this target is not necessary if you put ivy.jar in your ant lib directory
+            if you already have ivy in your ant lib, you can simply remove this
+            target and the dependency the 'go' target has on it
+         ================================= -->
+    <target name="install-ivy" depends="download-ivy" description="--> install ivy">
+    	<!-- try to load ivy here from local ivy dir, in case the user has not already dropped
+    	      it into ant's lib dir (note that the latter copy will always take precedence).
+    	      We will not fail as long as local lib dir exists (it may be empty) and
+    	      ivy is in at least one of ant's lib dir or the local lib dir. -->
+    	<path id="ivy.lib.path">
+    	    <fileset dir="${ivy.jar.dir}" includes="*.jar"/>
+    	</path>
+    	<taskdef resource="org/apache/ivy/ant/antlib.xml"
+    	          uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
+    </target>    
+	
 <!-- COMPILE -->   
-    <target name="JAVA-compile">
+    <target name="JAVA-compile" depends="install-ivy">
+    	<ivy:retrieve symlink="true" sync="true"/>
         <mkdir dir="${java.classes.dir}"/>
         <javac srcdir="${java.src.dir}" debug="${debug}" debuglevel="${debuglevel}" destdir="${java.classes.dir}" includeantruntime="false">
-            <classpath refid="skytrust.classpath"/>
+        	<classpath>      <fileset dir="lib">
+                <include name="**/*.jar"/>
+              </fileset>
+        	</classpath>
         </javac>
     </target>
     <target name="C-compile">
@@ -93,13 +121,10 @@
 
 <!-- JAR -->   
     <target name="jar" depends="JAVA-compile">
-     <jar destfile="${c.lib.dir}/${ant.project.name}.jar">
+     <jar destfile="bin/${ant.project.name}.jar">
 				<fileset dir="${java.classes.dir}"/>
 				<fileset file="config"/>
-			<!--	<fileset dir="skytrust-element-java/common/target/classes/"/>
-				<fileset dir="skytrust-element-java/core/target/classes/"/> -->
-				<!-- <zipfileset includes="**/*.class" src="lib/dependencies.jar"/>-->
-				<zipfileset includes="**/*.class" src="lib/instance-jce-to-remote-1.0-SNAPSHOT-jar-with-dependencies.jar"/>
+     			<fileset dir="${c.lib.dir}"/>
 			<manifest>
 			    <attribute name="Class-Path" value="/usr/share/java/"/> 
 			</manifest>
