--- a/samples/webservice-with-auth-and-keydatabase/src/main/resources/database.properties
+++ b/samples/webservice-with-auth-and-keydatabase/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-connectionstring = jdbc:mysql://localhost/cloudks_dev
+connectionstring = jdbc:mysql://localhost/cloudks_dev?autoReconnect=true
 username = cloudks
 password = cloudkspassword
