--- a/samples/webservice-ibe/src/main/resources/settings.properties
+++ b/samples/webservice-ibe/src/main/resources/settings.properties
@@ -4,3 +4,8 @@ adminpassword = yourpasswordhere
 searchRoot = yoursearchroothere
 searchFilter = (&(objectClass=user)({0}={1}))
 targetAttribute = msSFU30Name
+
+keystorefile = classpath:keystore.jks
+keystorepassword = changeit
+
+capsoconfigfile = capso-test.xml
