fixed domain username alias headache

--- a/samples/webservice-ibe/src/main/resources/settings.properties
+++ b/samples/webservice-ibe/src/main/resources/settings.properties
@@ -1,4 +1,5 @@
 url = ldap://yoururlhere
+domainPrefix = yourprefixhere
 adminuser = yourusernamehere
 adminpassword = yourpasswordhere
 searchRoot = yoursearchroothere
